[Finish] 1-9 chapter9 exersice

--- a/index.html
+++ b/index.html
@@ -9,5 +9,40 @@
 
   <body>
 
+    <div class="heading"></div>
+
+    <main>
+
+      <div class="service-box">
+        <div class="service-img1"></div>
+          <span class="service-step">step1</span>
+          <h3 class="service-title">タイトルが入ります</h3>
+          <p class="service-text">
+            文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+          </p>
+      </div>
+
+      <div class="service-box">
+        <div class="service-img2"></div>
+          <span class="service-step">step２</span>
+          <h3 class="service-title">タイトルが入ります</h3>
+          <p class="service-text">
+            文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+          </p>
+      </div>
+
+      <div class="service-box">
+        <div class="service-img3"></div>
+          <span class="service-step">step３</span>
+          <h3 class="service-title">タイトルが入ります</h3>
+          <p class="service-text">
+            文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。
+          </p>
+      </div>
+
+    </main>
+    <footer></footer>
+
+
   </body>
 </html>
